update some css property

--- a/display/style.css
+++ b/display/style.css
@@ -1,13 +1,17 @@
 
 .container{
     display: flex;
+    height: 100vh;
+    width: 100%;
     justify-content: space-evenly;
+    align-items: center;
+    background-color: black;
 }
 .card {
     width: 300px;
     /* height: 390px; */
     background-color: white;
-    margin-top: 120px;
+    /* margin-top: 120px; */
     padding: 40px 5px 40px 30px;
     box-shadow: 0px 0px 10px 10px lightskyblue;
     border-radius: 20px;
